trying to get it to see changes to popups

--- a/app/views/layouts/_popup_footer_dialogs.html.erb
+++ b/app/views/layouts/_popup_footer_dialogs.html.erb
@@ -32,62 +32,70 @@
 	<p>
 		<a href="www.tru-medical.com">www.tru-medical.com</a>
 	</p>
-	
-	<p>If you prefer to email in your question, feedback or anything else, you can use the form below and someone will get back to you within 24 hours or less.  We look forward to hearing from you!
-	</p>
-	<p>[ INSERT FORM HERE ] </p>
 	<h2>Hours of Operation</h2>
 	<p>Monday thru Friday 8:30AM to 6:00PM EST</p>
 </div>
 
 <!-- privacy policy ——————————————————————————————— -->
 <div id='privacyPolicy'>
-	<h2>This website takes every precaution to protect our users' information.</h2>
-	<p>Our entire site, including but not limited to areas where we ask users to enter sensitive information (such as credit card or bank account numbers) is encrypted and is protected by an advanced 128-bit encryption software protocol – SSL.</p>
+	<div id="tabs">
+		<ul>
+			<li><a href="#tab_1">Privacy Policy</a></li>
+			<li><a href="#tab_2">Information</a></li>
+			<li><a href="#tab_3">Confidentiality</a></li>
+			<li><a href="#tab_4">Inactivate Accounts</a></li>
+			<li><a href="#tab_5">Report Fraud</a></li>
+		</ul>
+		<div id="tab_1">
+			<h2>Privacy Policy</h2>
+			<p>At TruMedical Solutions we respect your privacy. Whether you request a catalog, place an on-line order, or e-mail us, your personal information is handled with your privacy and security in mind.</p>
+			<p>Our entire site, including but not limited to areas where we ask users to enter sensitive information (such as credit card or bank account numbers) is encrypted and is protected by an advanced 128-bit encryption software protocol – SSL.</p>
 
-	<p>While we use SSL encryption to protect sensitive information online, we also take steps to protect user-information off-line. Only employees who need the information to perform a specific task are granted access to any personally identifiable information.</p>
+			<p>While we use SSL encryption to protect sensitive information online, we also take steps to protect user-information off-line. Only employees who need the information to perform a specific task are granted access to any personally identifiable information.</p>
 
-	<p>TruMedical Solutions, LLC.  places the utmost importance on protecting information transmitted via our website and takes security precautions to protect all such information from loss, misuse, and alteration. These precautions are regularly reviewed and enhanced as part of TruMedical Solutions’ ongoing commitment to customer security and privacy.</p>
+			<p>TruMedical Solutions, LLC.  places the utmost importance on protecting information transmitted via our website and takes security precautions to protect all such information from loss, misuse, and alteration. These precautions are regularly reviewed and enhanced as part of TruMedical Solutions’ ongoing commitment to customer security and privacy.</p>
 
-	<p>If you have any questions about the security at our website, please e-mail us at: <%= mail_to "websupport@tru-medical.com",nil, :subject => "privacy policy" %>.</p>
+			<p>If you have any questions about the security at our website, please e-mail us at: <%= mail_to "websupport@tru-medical.com",nil, :subject => "privacy policy" %>.</p>
 
 
-	<p>TruMedical Solutions, LLC.  reserves the right to alter this policy at any time. Changes will be posted immediately on our website.</p>
-
-	<h2>Privacy Policy</h2>
-	<p>At TruMedical Solutions we respect your privacy. Whether you request a catalog, place an on-line order, or e-mail us, your personal information is handled with your privacy and security in mind.</p> 
-
-	<h2>Information Collection and Use</h2>
-	<p>TruMedical Solutions collects information from our users at several points on our website:
-	<dl>
-		<dt>Registration</dt><dd>In order to use some functions of this website, a user must first complete a registration form. During registration a user is required to give their contact information (such as name and email address).</dd>
-		<dt>Ordering</dt><dd>We request information from the user when completing an order. Here, a user must provide contact information (like name and shipping address) and financial information (like credit card number, expiration date). This information is used specifically for billing purposes and to fill customer's orders. If we have trouble processing an order, this contact information is used to get in touch with the user.</dd>
-		<dt>Cookies</dt><dd>Cookies are bits of information stored on your computer that enable us to customize your shopping experience and identify you when you return. Cookies can be disabled, but please keep in mind that if you do so, your browsing experience may be limited.</dd>
-		<dt>Log Files</dt><dd>We use IP addresses to analyze trends, administer the site, and track user movement only within our website. IP addresses are not linked to personally identifiable information.</dd>
-		<dt>Communications</dt><dd>TruMedical Solutions may also retain the content of the communications that are sent to our customer service representatives.</dd>
-	</dl>
-	<h2>Information Use</h2>
-	<p>The information collected by TruMedical Solutions is used to, among other things, aggregate statistical information, facilitate system administration, improve the content of the website, fill orders, and also to respond to user requests for information and to otherwise render service. TruMedical Solutions may also use the information collected to notify site users of changes to the website, to notify visitors of new products, special promotional offers, or for other legitimate business purposes. If you do not wish to receive e-mails from us, please contact Customer Service.</p>
-
-	<h2>Confidentiality and Disclosure</h2>
-	<p>TruMedical Solutions considers the personally identifiable information contained in our business records to be confidential. TruMedical Solutions does not provide any personally identifiable information to other companies except when necessary to render service. We may disclose personally identifiable information about you to our employees for TruMedical Solutions’ internal business purposes, as well as to outside auditors, professional advisors, service providers and regulators. We make these disclosures when the disclosure is necessary to render, or conduct a legitimate business activity. We may also be required by law or legal process to disclose certain personally identifiable information about you. TruMedical Solutions may use and disclose personally identifiable information as provided for by applicable law in order to perform legitimate business activity. Some examples: billing and invoicing, administration, surveys, collection of fees and charges, marketing, service delivery and customization, maintenance and operations, technical support, hardware and software upgrades, and fraud prevention.</p>
-
-	<h2>Legal Disclaimer</h2>
-	<p>We make every reasonable effort to protect site user privacy as described. Nevertheless, we may be required by law to disclose personally identifiable information about a site user without his or her consent and without notice in order to comply with a valid legal process such as a subpoena, court order, or search warrant. We may also use or disclose personally identifiable information about you without your consent to protect our customers, employees, or property.</p>
-
-	<h2>Transmission of Information</h2>
-	<p>TruMedical Solutions transmits personally identifiable and non-personally identifiable information about you when you receive e-mail, or electronic documents. Our transmission of this information is necessary to render service. TruMedical Solutions may use third parties to deliver some features and functions of service, such as electronic document delivery. These third parties are not permitted to use your personally identifiable information except for the purpose of providing their services.</p>
-
-	<h2>Links</h2>
-	<p>This website contains links to other sites. Please be aware that TruMedical Solutions is not responsible for the privacy practices of other sites. We encourage our users to be aware when they leave our site and to read the privacy statements of each website that collects personally identifiable information. This privacy statement applies solely to information collected by TruMedical Solutions.</p>
-
-	<h2>Inactivate Online Accounts</h2>
-	<p>An online account may be inactivated by email request to Site Support. Inactivation could take up to 24 hours and only applies to registered online accounts, not ordering accounts. If there is an urgent security issue, please change the account password and email address if necessary and contact Site Support.</p>
-
-	<h2>Report Suspected Fraud</h2>
-	<p>If you suspect that you’re login information has been misused by other parties or fraudulent ordering is occurring on your account, please change your password and contact Customer Service immediately.</p>
+			<p>TruMedical Solutions, LLC.  reserves the right to alter this policy at any time. Changes will be posted immediately on our website.</p>
+		</div><!-- end tab_1 -->
 	
-</div>
+		<div id="tab_2">
+	
+			<h2>Information Collection and Use</h2>
+			<p>TruMedical Solutions collects information from our users at several points on our website:
+			<dl>
+				<dt>Registration</dt><dd>In order to use some functions of this website, a user must first complete a registration form. During registration a user is required to give their contact information (such as name and email address).</dd>
+				<dt>Ordering</dt><dd>We request information from the user when completing an order. Here, a user must provide contact information (like name and shipping address) and financial information (like credit card number, expiration date). This information is used specifically for billing purposes and to fill customer's orders. If we have trouble processing an order, this contact information is used to get in touch with the user.</dd>
+				<dt>Cookies</dt><dd>Cookies are bits of information stored on your computer that enable us to customize your shopping experience and identify you when you return. Cookies can be disabled, but please keep in mind that if you do so, your browsing experience may be limited.</dd>
+				<dt>Log Files</dt><dd>We use IP addresses to analyze trends, administer the site, and track user movement only within our website. IP addresses are not linked to personally identifiable information.</dd>
+				<dt>Communications</dt><dd>TruMedical Solutions may also retain the content of the communications that are sent to our customer service representatives.</dd>
+			</dl>
+	
+			<h2>Information Use</h2>
+			<p>The information collected by TruMedical Solutions is used to, among other things, aggregate statistical information, facilitate system administration, improve the content of the website, fill orders, and also to respond to user requests for information and to otherwise render service. TruMedical Solutions may also use the information collected to notify site users of changes to the website, to notify visitors of new products, special promotional offers, or for other legitimate business purposes. If you do not wish to receive e-mails from us, please contact Customer Service.</p>
+		</div><!-- end div 'tab_2' -->
+
+		<div id="tab_3">
+			<h2>Confidentiality and Disclosure</h2>
+			<p>TruMedical Solutions considers the personally identifiable information contained in our business records to be confidential. TruMedical Solutions does not provide any personally identifiable information to other companies except when necessary to render service. We may disclose personally identifiable information about you to our employees for TruMedical Solutions’ internal business purposes, as well as to outside auditors, professional advisors, service providers and regulators. We make these disclosures when the disclosure is necessary to render, or conduct a legitimate business activity. We may also be required by law or legal process to disclose certain personally identifiable information about you. TruMedical Solutions may use and disclose personally identifiable information as provided for by applicable law in order to perform legitimate business activity. Some examples: billing and invoicing, administration, surveys, collection of fees and charges, marketing, service delivery and customization, maintenance and operations, technical support, hardware and software upgrades, and fraud prevention.</p>
+			<h2>Legal Disclaimer</h2>
+			<p>We make every reasonable effort to protect site user privacy as described. Nevertheless, we may be required by law to disclose personally identifiable information about a site user without his or her consent and without notice in order to comply with a valid legal process such as a subpoena, court order, or search warrant. We may also use or disclose personally identifiable information about you without your consent to protect our customers, employees, or property.</p>
+		</div><!-- end div 'tab_3' -->
+	
+		<div id="tab_4">	
+			<h2>Inactivate Online Accounts</h2>
+			<p>An online account may be inactivated by email request to Site Support. Inactivation could take up to 24 hours and only applies to registered online accounts, not ordering accounts. If there is an urgent security issue, please change the account password and email address if necessary and contact Site Support.</p>
+		</div><!-- end div 'tab_5' -->
+	
+		<div id="tab_5">
+			<h2>Report Suspected Fraud</h2>
+			<p>If you suspect that you’re login information has been misused by other parties or fraudulent ordering is occurring on your account, please change your password and contact Customer Service immediately.</p>
+		</div><!-- end div 'tab_5' -->
+	
+	</div> <!-- end div 'tabs' -->	
+</div> <!-- end div 'privacyPolicy' -->
 
 <!-- comment out to attempt to avoid conflict with devise on Users
 <%# render :partial => '/shared/request_catelog' %>
