--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -71,7 +71,7 @@
 	<style type="text/css">
 		div#product_div { margin-top:20px; margin-bottom:15px;}
 		div.left { float:left; padding:20px;}
-		div.left div.picture { width:780px; overflow-x:hidden; }
+		div.left div.picture { width:260px; overflow-x:hidden; } /* was 780: hiding description on right */
 		div.right {}
 		/* div.picture { margin-bottom:15px;}*/
 
