--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
 	  	<title>TruMedical Solutions</title>
 	
 		<%= stylesheet_link_tag "custom-theme/jquery-ui-1.8.10.custom.css" %>
+		<!-- <%# stylesheet_link_tag "ui-lightness/jquery-ui-1.8.18.custom.css" %> -->
 		
     <%= stylesheet_link_tag "trumedical_base.css" %>
 		<%= stylesheet_link_tag "search.css" %> 
@@ -39,7 +40,8 @@
 		<!-- standard js files -->
 		
 		<%= javascript_include_tag "jquery-1.4.4.min.js" %>
-		<%= javascript_include_tag "jquery-ui-1.8.10.custom.min.js" %>
+		<!-- <%# javascript_include_tag "jquery-ui-1.8.10.custom.min.js" %> -->
+		<%= javascript_include_tag "jquery-ui-1.8.18.custom.min.js" %>
 		<%= javascript_include_tag "jQuery_Tools.1.2.3.scrollable.js" %> 
 		<!-- <%# javascript_include_tag :defaults %> <!-- included because StackOverflow responce to sign_out delete problem; causing other problems: attempts to link prototype libraries -->
 		
@@ -117,10 +119,12 @@
 		<script type="text/javascript">
 
 			$(document).ready(function(){
-				$("div#contactUs").dialog( { autoOpen:false, modal:true, position:[260,60], width:560, minHeight:200, title:"Contact Us" })
-				$("div#privacyPolicy").dialog( { autoOpen:false, modal:true, position:[260,60], width:800, minHeight:200, title: "Privacy Policy" })
-				$("div#requestCatelog").dialog( { autoOpen:false, modal:true, position:[260,60], width:560, minHeight:200, title:"Request a Catelog" })
 				
+				$("div#contactUs").dialog( { autoOpen:false, modal:true, position:[360,60], width:560, minHeight:200, title:"Contact Us" });
+				$("div#privacyPolicy").dialog( { autoOpen:false, modal:true, position:[360,60], width:800, minHeight:200, title: "Privacy Policy" });
+				/*
+				$("div#requestCatelog").dialog( { autoOpen:false, modal:true, position:[360,60], width:560, minHeight:200, title:"Request a Catelog" })
+				*/
 				$("a[href='#contactUs']").click(function(){
 					$("div#contactUs").dialog('open');
 					return false;
@@ -129,11 +133,14 @@
 					$("div#privacyPolicy").dialog('open');
 					return false;
 				});
+				/*
 				$("a[href='#requestCatelog']").click(function(){
 					$("div#requestCatelog").dialog('open');
 					return false;
 				});
-
+				*/
+				$("div#tabs").tabs(); /* initialize tabs within privacyPolicy */
+				
 				$("a[href='#url']").click(function(){
 					alert("As-yet-unimplemented link.");
 					return false;
