--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -2,6 +2,9 @@
 <!-- ————————————————————————————————————————————————————————————————
 		Controller: Search
 		Action: results 
+		
+		WARNING: This is old code that is not currently used; it uses content_for(:body). 
+		The current layout/application.html.erb file does a yield(:middleBand)
 ————————————————————————————————————————————————————————————————————— -->
 
 <%= content_for(:header) do %>
