--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -5,80 +5,40 @@
 			——————————————————————————————————————————————————————————————————————
 
 			Search process and how views/products/search.html.erb fits into it:
-				1. search products class and find products whose sammon's part number matches the part number entered on the form. accept sammon's part number in data entry field defined by the form.  Pass that to products/search controoler/action.
+				1. search products class and find products whose sammon's part number matches the part number entered on the form. accept sammon's part number in data entry field defined by the form.  Pass that to products/search controller/action.
 				2. in controller do the search for exactly match products, and send an array of them to views/products/show.html.erb controller
-				3. if no matching products found? 
+				3. if no matching products found? message to that effect
 				4. if sammons number found but match is not exact, msg to that effect, and then show what was found — or just show it with a note that it is not an exact match. 
-				5. drop the add-to-cart button this page; if user wants to buy it, have him/her follow the link to the detailed product page.  Buy it from there. 
-				
-			Formatting ... bugs 
-				1. formatting of the set of returned results could use some love 
-					 — Why is this showing up? One for every result, at the bottom of the display of results  #<Product:0x102ecd670>#<Product:0x102ec7310>
-					 — 
-				2. pagination not working: use Kaminari to avoid conflict with /Admin
-				3. add-to-cart javascript: correct? Remove from this page.  
-				4. try it with _s sized picture width=100 versus 236 for _m sized images
+				5. if user wants to buy the product or see image, click the 'See Details' link to go to the product-type, product-set, base-product, or simple product show page. Buy it (or a set of related products, or ... ) from there.
+				 
+			Bugs:
+				1. 'See Detail' button working for Simple Products; need to test other product types
+				2. Need more complex logic to get from a tms_part_no to the base-product, product-set, or product-type of which it is a variant/member/instance. 
+				3. mapping from sammons part number to tms number?  It seems that I am sometimes getting to a simple product page for a product that does not have a picture — even a -000.jpg one. Why/How? 
 
+			ToDo:
+				1. Cut the use of MetaSearch (and MetaWhere?) gems. Just use an SQL LIKE statement in the controller to do the search, and use a form_tag macro in the footer, not a form_for tag.  The latter requires an object instance, and we don't logically have one here; we're searching for one. Commit the metasearch branch, and then start another called 'removemetasearch'. 
 -->
 
 
 <!-- header includes  ————————————————————————————————————————————————————  -->
 <%= content_for(:header) do %>
 
-
 	<title>Tru-Medical | Product Search </title>
 
 	<script type="text/javascript">
 		jQuery(document).ready(function() {
 			
-			jQuery("#add_to_cart_button").click(function(){
-					alert("Adding item to cart. Click OK to continue.");
-			    addtocart();
-			    return false;
-        	});
 		});
-		
-		function addtocart()
-	    {
-				var netsuite_item_id = <%= @product.netsuite_item_no %> //get netsuite id from database
-        var accountid = "3320544"; //Netsuite account id
-        var qtyadd = jQuery("#qty").val() //qty field id; missing semicolon? 
-        if(qtyadd!="")
-        	{
-	      		//add to cart url
-            var myurl = 'http://shopping.netsuite.com/app/site/backend/additemtocart.nl?c='+accountid+'&qty='+qtyadd+'&buyid='+netsuite_item_id + '&n=1';
-            					                				
-						//create hidden iframe in body
-        		jQuery('body').append('<iframe id="addtocartframe" style="display:none" />'); 
-        		//change src to iframe
-        		jQuery('#addtocartframe').attr('src', myurl);
-        		return false;
-		    	}
-			}	
 	</script>
 
 
 	<style type="text/css">	
+		p.testing { color:red; }
+		div#search_results { padding-top:1px;!important;} /* to line up underscore with bottom 
+			of 'Modalities' menu item in the left screen. */
 		div#metasearch form input[type="text"] {width: 160px;}
-		button#add_to_cart_button{ 
-				width:85px;
-				padding:4px 0px 4px 0;
-				font-size:11px;
-				font-weight:bold;
-				line-height: 15px;
-				margin-top:20px;
-				margin-left:0px;
-				text-align:center;
-				font-family: inherit;
-				color: white;
-				background-color: orange; 
-				border:none;
-				border-radius: 2px;
-				-moz-border-radius: 2px;
-				-webkit-border-radius: 2px;
-			}
-			input#add_to_cart_button { margin-top:10px; }
-		
+
 		p.noMatchError { 
 			margin-top:10px; 
 			font-size:12px; color:orange; font-weight:bold;
@@ -122,94 +82,97 @@
 <% end %>	
 
 
-<%= content_for(:body) do %>
+<%= content_for(:middleBand) do %>
 
 	<div id="body-background">	
-		<!-- <img src="../images/landscapes/road_aero.jpg" width="1354" height="900" alt="Bg"> -->
+		<!-- <img src="../images/background/xxx.jpg" width="1354" height="900"> -->
 	</div>
     
-	<!-- container —————————————————————————————————————————————————————————————————— -->
 
-	<div id="container">
-		<div id="black_screen"></div> <!-- used here?  drop from category#display also? -->
-
-	  <!-- subcontainer —————————————————————————————————————————————————————— -->
-
-		<div id="subcontainer">
-		
-			<!-- menu —————————————————————————————————————————————————————  -->
-		
+	<div id="left_column">		
 			<%= render :partial => 'shared/menu' %>
-			<%= render :partial => 'shared/search' %>
-
-	    <!-- main content —————————————————————————————————————————————— -->
-
-			<div id="main_content">
-				
-				<!-- breadcrumb trail ——————————————————————————————————————————————— -->
-				
-				<!-- menu popups: top level categories ——————————————————————————————————— -->
-				
-				<%= render(:partial => "/shared/menu_popups") %>
-				<div id="error-messages" style="display:none">
-					<div class="messages error"></div>
-				</div>
-
-	      <!-- search results ————————————————————————————————————————————————— -->
-				<div id="search_results">
-
-						<% if @products.empty? %>
-							<p class="noMatchError">No products matched your search criteria.</p>
-						<% else %>
-							<p class="isMatch">Your search returned the following product(s):</p>
-						 	<% @products.each do |p| %>
-
-								<div class="product_detail"> 
-
-									<!-- Show picture? 
-									<%# image_tag("/images/products/all_small/" + p.image_filename, { :width => 100 }) %>
-									-->
-									<p class=""><strong>Sammons part number:</strong>&nbsp;<%= p.sammons_part_no %>
-									<p class=""><strong>TMS part number:</strong>&nbsp;<%= p.tms_part_no %>
-									<p class=""><strong>Match:</strong>&nbsp;<%= p.sammons_category_match %>
-									<p class="name"><strong>Name:</strong>&nbsp;<%= raw(p.name) %></p>
-									<p class="subtitle"><strong>Description:</strong>&nbsp;<%= raw(p.description) %></p>
-									<!-- <p class="price"><strong>Price:</strong>&nbsp;<%# number_to_currency(p.price_clinic_list) %></p> -->
-									<% if p.type == "ProductSet" %>
-										<button class="more ui-corner-all"><%= link_to "See Details", {:controller => 'product_sets', :action => 'show', :id => p.product_set.id } %></button>
-									<% elsif p.type == "BaseProduct" %>
-										<button class="more ui-corner-all"><%= link_to "See Details", {:controller => 'base_products', :action => 'show', :id => p.base_product.id } %></button>
-									<% else %>
-										<button class="more ui-corner-all"><%= link_to "See Details", {:controller => 'products', :action => 'show', :id => p.id } %></button>
-									<% end %>
-
-									<div style="clear:both"></div>
-
-								</div><!-- end #product-detail -->
-
-							<% end %> <!-- end of do statement -->
-
-
-							<div id="searchPagination">
-									<!-- <p><%# paginate @products %></p> -->
-							</div>
-
-						<% end %> <!-- end of if ... else ... statement -->
-
-				</div><!-- end of div search_results -->
-
-			</div> <!-- end div#main_content -->
-
-		</div><!-- end div#subcontainer -->
-
-
-		<!-- RIGHT CONTENT ————————————————————————————————————————————————————— -->
-
-		<div id="right_content_container">
-	    <%= render(:partial => 'shared/rightContent') %>	       
+			<%= render :partial => 'shared/featuredProducts' %>
+	</div> <!-- end of div left_column -->
+	
+	<div id="center_column">
+			
+		<!-- breadcrumb trail ——————————————————————————————————————————————— -->
+		<!-- removed for now because product pages being shown from sammon search
+					may not have a category_id 
+		-->
+		<!-- menu popups: top level categories ——————————————————————————————————— -->
+		<%= render(:partial => "/shared/menu_popups") %>
+		
+		<div id="error-messages" style="display:none">
+			<div class="messages error"></div>
 		</div>
 
-	</div><!-- end div#container -->
+    <!-- search results ————————————————————————————————————————————————— -->
+		<div id="search_results">
+			
+				<% if @products.empty? %>
+					<p class="noMatchError">No product(s) matched the part number you entered.</p>
+				<% else %>
+					<p class="isMatch">Your search returned the following product(s):</p>
+				 	<% @products.each do |p| %>
+
+						<div class="product_detail"> 
+
+							<!-- Show picture? 
+							<%# image_tag("/images/products/all_small/" + p.image_filename, { :width => 100 }) %>
+							-->
+							<p class=""><strong>Sammons part number:</strong>&nbsp;<%= p.sammons_part_no %>
+							<p class=""><strong>TMS part number:</strong>&nbsp;<%= p.tms_part_no %>
+							<p class=""><strong>Match:</strong>&nbsp;<%= p.sammons_category_match %>
+							<p class="name"><strong>Name:</strong>&nbsp;<%= raw(p.name) %></p>
+							<p class="subtitle"><strong>Description:</strong>&nbsp;<%= raw(p.description) %></p>
+							<!-- <p class="price"><strong>Price:</strong>&nbsp;<%# number_to_currency(p.price_clinic_list) %></p> -->
+							
+							<% case   %>
+								<% when p.product_type then %>
+										<button class="more ui-corner-all"><%= link_to "See Product", product_type_path(p.product_type.id) %></button>
+								<!-- <# when p.product_set then %>
+										<button class="more ui-corner-all"><#=link_to "See Set", product_set_path(p.product_set.id) %></button>
+								-->
+								<% when p.base_product then %>
+									<% if p.base_product.product_set then %>
+										<button class="more ui-corner-all"><%=link_to "See Product(s)", product_set_path(p.base_product.product_set.id) %></button>
+									<% else %>
+										<button class="more ui-corner-all"><%= link_to "See Product(s)", base_product_path(p.base_product.id) %></button>
+									<% end%>
+								<% when p.type == "SimpleProduct" && !p.base_product then %>
+										<button class="more ui-corner-all"><%= link_to "See Product", product_path(p.id) %></button>
+								<% else %>
+											<!-- raise error;  accessories? -->
+											<button class="more ui-corner-all"><%= link_to "ERROR", {:controller => 'products', :action => 'show', :id => p.id } %></button>
+									
+							<% end %>
+								
+							<!-- original code: that did not handle product types, and could not 
+								be expanded to add another elsif clause 
+							<# if p.type == "ProductSet" %>
+								<button class="more ui-corner-all"><#= link_to "See Details", {:controller => 'product_sets', :action => 'show', :id => p.product_set.id } %></button>
+							<# elsif p.type == "BaseProduct" %>
+								<button class="more ui-corner-all"><#= link_to "See Details", {:controller => 'base_products', :action => 'show', :id => p.base_product.id } %></button>
+							<# else %>
+								<button class="more ui-corner-all"><#= link_to "See Details", {:controller => 'products', :action => 'show', :id => p.id } %></button>
+							<# end %>
+						-->
+
+						</div><!-- end #product-detail -->
+
+					<% end %> <!-- end of do statement -->
+
+
+					<div id="searchPagination">
+							<!-- <p><%# paginate @products %></p> -->
+					</div>
+
+				<% end %> <!-- end of if ... else ... statement -->
+
+		</div><!-- end of div search_results -->
+
+	</div> <!-- end div#center_column -->
 
 
 	<!-- logo_container ——————————————————————————————————————————————————————————————— -->
@@ -218,26 +181,7 @@
 		<a href="/en" id="logo" title="home page" name="logo">competitor search results page</a>
 	</div>
 
-<% end %>
+<% end %> <!-- end of content-for middleBand-->
 
 
-
-
-  
-   
-<!-- #middleBand   ———————————————————————————————————————————————————————————————— -->
- 
-<%= content_for(:content_container) do %>
-
-
-	<!-- center  ———————————————————————————————————————————————————————————— -->
-	
-	<div id="center">
-		
-		
-		
-	</div><!--end div#center-->
-	
-
-<% end %>
 
