sammons search simple product accessories

--- a/app/views/home/_popups_home.html.erb
+++ b/app/views/home/_popups_home.html.erb
@@ -125,7 +125,7 @@
 	</div>
 
 	<!-- Payors popup ————————————————————————————————————————————————————-->
-	<div id="popup_payors" class="popup_base">
+	<div id="popup_payors" class="popup_base" style="background-color:orange!important;">
 		<img class="close" src="/images/utility/close16_white.png">
 		<h2>Experience</h2>
 		<p>Our team of professionals is built on a foundation of 25 years of Health Plan Management Experience.  We understand the challenges that your members face when they enter the healthcare system and we’re here to help them navigate the course.  Our goal is to reduce the administrative burden placed on health plans as it relates to member specific healthcare products and services.  Through our in-depth knowledge of products and member education we believe that the end result will be healthier more individually engaged members.</p>
