--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -65,7 +65,7 @@
 	#menu a.level1B.current
 	
 	{
-		background: yellow; /* 0094DE */
+		background: orange; /* orange; try yellow */
 		margin-left: 0px;
 		margin-right: 0px;
 		padding-left: 13px;
