--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,34 +7,18 @@
 				—————————————————————————————————————————————————————————————————————————————————————————	
         
 				to do:
-					1. Use /shared/_menu.html.erb for menu  [DONE]
-					2. Create code that iterates through leaf-level categories for this subcategory [DONE]
 					3. Comment out the sibling category navigation until can make it work:
 							1. how handle more than will fit on the line? —— scroll in from the right? 
 							2. when click on a link in the sibling have either: (a) highlight that one in orange and use AJAX to rbuild the set of images in the body of the page, or (b) go to a new page, in which the category clicked on is the left-most one in the top menu  ( or is correctly placed, but highlighted). Of these, I like the AJAX alternative. 
 				
 				bugs:
-					1. left nav doesn't work on this page
-					2. alignment of subcategories
-					3. search ugly
 					4. remove down arrow from what is now the category title at the top of the page, but used to be a button for the sibling nav. 
 
             
         open questions:
 					1. Background image for modalities — or just a color block?  
-					2. width:  
-            	15 left_content(235) 745 (main) 5px (running total:1000) right_content(235), 160; total 1395  (but only measures 1390; where is the 5px?) Answer: main+right padding=745 not 750
-                so:
-                	1000 to edge of main content block + 5 px border, so 1010 to balance it with 15px border on right/left
-                    1235 to right end of right_content block; 1250 if include a 15px border on right
-                    170 logomark which overlaps with the content-right by 10 px, and is tied to right edge of window      			
 					3. Enable floating logomark?  if so : design one that works on a block of color. 
-					4. Need to understand how the code is moving right_content from right to left under menu if page is too narrow. This works here, in mavic_llc.html  but not in mav0llc_3.html, where it drops below the main block also. Even on this page, works on Safari, but drops below left on Firefox.
-						— If left it on left in all pages, then it would not interfere with upper right links
-						to Netsuite. 
-					
-				refactoring:
-					1. Create partial for right_content and replace it in all templates with a render(:partial)  [DONE]
+					4. Consider moving what is now called featuredProducts div to a #right column within #middleBand — either always, or if the users window is wide enough.  If not, tuck it under left nav as it is now. 
             
         —————————————————————————————————————————————————————————————————————————————————————————
     -->
