--- a/public/stylesheets/custom-theme/jquery-ui-1.8.10.custom.css
+++ b/public/stylesheets/custom-theme/jquery-ui-1.8.10.custom.css
@@ -59,7 +59,7 @@
 .ui-widget { font-family: Verdana,Arial,sans-serif; font-size: 12px; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }
-.ui-widget-content { border: 1px solid gainsboro; background-color:white; color: #333333; }
+.ui-widget-content {background-color:white; color: #333333; } /* border removed 3/26; was showing up in categories/show.html.erb; was 1px solid gainsboro */
 .ui-widget-content a { color: #333333; }
 .ui-widget-header { border: 1px solid #ffffff; background-color: gainsboro; color: #333333; font-weight: bold; }
 .ui-widget-header a { color: #333333; }
