sammons search refix

--- a/app/views/home/_menu_home.html.erb
+++ b/app/views/home/_menu_home.html.erb
@@ -41,7 +41,7 @@
 		<div class="menu_separator"></div>
 
 		<!-- menu item: TRUMEDICAL ————————————————— -->
-		<a class="level1 helvetica" href="#" id="trumedical" style="color:#0094DE!important;">TruMedical</a>
+		<a class="level1 helvetica" href="#" id="trumedical" style="color:#0094DE!important;">About TruMedical</a>
 		<div class="menu_separator"></div>
 	
 		<!-- menu item: PATIENTS ————————————————— -->
