--- a/public/stylesheets/trumedical_base.css
+++ b/public/stylesheets/trumedical_base.css
@@ -104,7 +104,7 @@
 		opacity: 0.45;
 		filter: alpha(opacity=45);
 		height:850px; /* need to set this dynamically based on current height of window */
-		width:1060px; /* need to set this dynamically based on current width of window */
+		width:1085px; /* fixed width, since container is now fixed width */
 	}
 	
 	/* ————— styles for stuff in header: register/login; view-cart checkout ————— */
